# Ros2_base_cdf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
YDLidar-SDK/: CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  setup.py  ydlidar_config.h.in
YDLidar-SDK/cmake/: FindPackage.cmake.in  PkgConfig.pc.in  cmake_uninstall.cmake.in  install_package.cmake
YDLidar-SDK/csharp/: ydlidar_sdk.i
YDLidar-SDK/doc/: Dataset.md  Diagram.md  README.md  Tutorials.md  YDLIDAR_SDK_API_for_Developers.md  YDLidar-SDK-Communication-Protocol.html  YDLidar-SDK-Communication-Protocol.md
YDLidar-SDK/examples/: CMakeLists.txt  gs_test.cpp  gs_test2.cpp  sdm18_test.cpp  sdm_test.cpp  tea_test.cpp  tmini_test.cpp  tri_restart.cpp
YDLidar-SDK/python/: ydlidar_sdk.i
YDLidar-SDK/src/: CYdLidar.cpp  CYdLidar.h  DTSLidarDriver.cpp  ETLidarDriver.cpp  GSLidarDriver.cpp  GSLidarDriver.h  SDMLidarDriver.cpp  SDMLidarDriver.h  YDlidarDriver.cpp  YDlidarDriver.h
action_sequencer/: CMakeLists.txt  package.xml
action_sequencer/action_sequencer/: action_manager.py
action_sequencer/match/: script1.py
action_sequencer/scripts/: action_manager.py  action_sequencer_node.py
bringup/: setup.py
bringup/config/: lidar_cfg.yaml  lidar_params.yaml  simu_params.yaml
bringup/launch/: bringup.launch.py  bringup_test.launch.py  comm.launch.py  ihm.launch.py  lidar_detector.launch.py  lidar_only.launch.py  lidar_simu.launch.py  obj_detection.launch.py  position_processing.launch.py  robot_loc.launch.py  scripting.launch.py  simulation.launch.py  top_level.launch.py
cdf_msgs/: CMakeLists.txt  README.md
cdf_msgs/action/: MoveTo.action  StringAction.action
cdf_msgs/msg/: AxResult.msg  CircleObstacle.msg  DebugLidar.msg  GoalDetection.msg  LidarLoc.msg  MergedData.msg  Obstacles.msg  PicAction.msg  Poses2D.msg  PositionMap.msg  RobotData.msg  SegmentObstacle.msg  ServoDebug.msg  TCPmessage.msg
cdf_msgs/srv/: PosTrigger.srv
localization/: CMakeLists.txt  README.md  package.xml
localization/config/: simu_config.yaml
localization/launch/: all_launch.py  cpp_simu_launch.py  obs_all.launch.py  py_simu_launch.py
localization/localization/: math_lidar.py  (+1 more)
obstacle_detector/: CMakeLists.txt  README.md
obstacle_detector_2/: .gitignore  CMakeLists.txt  ORIGINAL_LICENSE  package.xml
opossum_action_sequencer/: CMakeLists.txt  package.xml
opossum_bringup/: CMakeLists.txt  README.md  package.xml
opossum_comm/: CMakeLists.txt  README.md  package.xml
opossum_comm/config/: comm_params.yaml  simu_comm.yaml
opossum_comm/launch/: comm.launch.py  simu_launch.py
opossum_comm/opossum_comm/: __init__.py
opossum_comm/scripts/: comm.py
opossum_comm/src/: comm_node.cpp
opossum_dev_gui/: CMakeLists.txt  package.xml
opossum_ihm/: CMakeLists.txt  package.xml
opossum_keyboard/: CMakeLists.txt  package.xml
opossum_keyboard/scripts/: keyboard_controller.py
opossum_localisation/: CMakeLists.txt  package.xml
opossum_localisation/config/: localisation_params.yaml  localisation_small_area_params.yaml
opossum_localisation/include/opossum_localisation/: BeaconSorter.hpp  PositionFinder.hpp  beacon_detector.hpp  math_lidar.hpp  publisher.hpp
opossum_localisation/launch/: localisation.launch.py
opossum_localisation/opossum_localisation/: __init__.py  math_lidar.py  publisher.py
opossum_localisation/scripts/: beacon_detector.py  tf_broadcaster.py
opossum_localisation/src/: BeaconSorter.cpp  PositionFinder.cpp  beacon_detector.cpp  math_lidar.cpp  publisher.cpp
opossum_msgs/: CMakeLists.txt  README.md  package.xml
opossum_nav/: CMakeLists.txt  package.xml
opossum_simu/: CMakeLists.txt  README.md  package.xml
opossum_simu/config/: simu_comm.yaml  simu_params.yaml  simu_robot.yaml
opossum_simu/include/opossum_simu/: position_sender.hpp
opossum_simu/launch/: simu.launch.py  simu_launch.py
opossum_simu/opossum_simu/: OmnidirectionalController.py  RobotState.py  math_simu.py
opossum_simu/scripts/: actuators_simu.py  camera_simu.py  camera_simulation.py  comm_simu.py  lidar_simu.py  mini_action_requester.py  motor_simu.py  position_sender.py  robot_controller.py  zynq_simu.py
opossum_simu/src/: position_sender.cpp
opossum_simu/utils/: plot_trajectory.py
opossum_vision/: CMakeLists.txt  Readme.md  package.xml
orchestrator_gui/: package.xml
rplidar_ros/: CMakeLists.txt
src/: README.md
src/cdf_msgs/: CMakeLists.txt  package.xml
src/cdf_msgs/action/: ActionSequencer.action  MoveTo.action
src/cdf_msgs/msg/: Buttons.msg  CamCommand.msg  CircleObstacle.msg  DebugLidar.msg  LidarLoc.msg  Obstacles.msg  PicAction.msg  RobotData.msg
src/cdf_msgs/srv/: Init.srv
src/ihm/: package.xml  setup.cfg  setup.py
src/ihm/ihm/: ihm_node.py  interface.py  parameters_server.py
src/localization/: CMakeLists.txt  README.md  package.xml
src/localization/config/: lidar_config.yaml  simu_config.yaml
src/localization/include/localization/: BeaconSorter.hpp  PositionFinder.hpp  beacon_detector.hpp  math_lidar.hpp  position_sender.hpp  publisher.hpp
src/localization/launch/: cpp_simu_launch.py  py_all_launch.py  py_simu_launch.py  simu_launch.py  simulation_beacons_launch.py
src/localization/localization/: BeaconSorter.py  OnboardRobotFinder.py  PositionFinder.py  math_lidar.py  publisher.py  test.py
src/localization/scripts/: beacon_detector.py  beacon_generator.py  lidar_simulation.py  nav_simulation.py  on_board_robot_detector.py  position_sender.py
src/localization/src/: BeaconSorter.cpp  PositionFinder.cpp  beacon_detector.cpp  math_lidar.cpp  publisher.cpp
src/localization/test/: unit_vector.cpp
src/obstacle_detector_2/: ORIGINAL_LICENSE  README.md  package.xml
src/obstacle_detector_2/include/obstacle_detector/: obstacle_extractor.h  obstacle_publisher.h  obstacle_tracker.h
src/obstacle_detector_2/launch/: obstacle_extractor.launch
src/obstacle_detector_2/src/: obstacle_extractor.cpp
utils/: config_robot.xml  first_launch.sh  launch.service  script_gui.sh  script_service.sh  tmux_script.sh
ydlidar_ros2_driver/: CMakeLists.txt  README.md  details.md
(+301 files in other folders)
